--- a/最強!論文検索ツール.md
+++ b/最強!論文検索ツール.md
@@ -4,7 +4,7 @@
 URL :
 https://www.connectedpapers.com/?utm_source=chatgpt.com
 
- [* Litmaps](関係を可視化。登録必須。)
+- Litmaps(関係を可視化。登録必須。)
 [https://scrapbox.io/files/6928108296740ce0df25e7db.png]
 URL :
 https://app.litmaps.com/
