--- a/最強!論文検索ツール.md
+++ b/最強!論文検索ツール.md
@@ -8,34 +8,34 @@ https://www.connectedpapers.com/?utm_source=chatgpt.com
 URL :
 https://app.litmaps.com/
 
- [* Research Rabbit](これも関係を可視化。登録必須。)
+ - Research Rabbit(これも関係を可視化。登録必須。)
 [https://scrapbox.io/files/69281497216260f0ce45971a.png]
 URL :
 https://app.researchrabbit.ai/
 
- [* Semantic Scholar](見やすい！多読用。登録必須。)
+- Semantic Scholar(見やすい！多読用。登録必須。)
 [https://scrapbox.io/files/692815082e83e626e87810fd.png]
 URL :
 https://www.semanticscholar.org/
 
- [* Elicit](表形式。多読用。登録必須。)
+- Elicit(表形式。多読用。登録必須。)
 [https://scrapbox.io/files/6928113efe7be08d3a93e627.png]
 URL :
 https://elicit.com/
 
- [* Paperguide](英語で論文書くときにはお世話になるかも？)
+- Paperguide(英語で論文書くときにはお世話になるかも？)
 URL :
 https://paperguide.ai/ja/
 
 [** 番外編]
- [* ChatGPT 5.1](日本語ありがたい～)
+- ChatGPT 5.1(日本語ありがたい～)
 URL :
 https://chatgpt.com/share/692815bd-ceb8-8009-af04-5441c103f4f5
 
- [* Zotero](論文管理用。基本無料かつ、chromeの拡張機能でサイトから直接入れる。)
+- Zotero(論文管理用。基本無料かつ、chromeの拡張機能でサイトから直接入れる。)
 [https://scrapbox.io/files/692816b540dbebb8cacf71ea.png]
 URL :
 https://www.zotero.org/
 
-　[* Cosense](伊達研御用達サイト。ちょっとしたメモに最適。)
+- Cosense(伊達研御用達サイト。ちょっとしたメモに最適。)
 [https://scrapbox.io/files/692818950149df9193a3ddb0.png]
