--- a/最強!論文検索ツール.md
+++ b/最強!論文検索ツール.md
@@ -4,22 +4,22 @@ URL :
 https://www.connectedpapers.com/?utm_source=chatgpt.com
 
 - Litmaps(関係を可視化。登録必須。)
-[https://scrapbox.io/files/6928108296740ce0df25e7db.png]
+<img width="1000" height="502" alt="image" src="https://github.com/user-attachments/assets/48daff2b-ec05-4a24-8e64-d2845b04356a" />
 URL :
 https://app.litmaps.com/
 
  - Research Rabbit(これも関係を可視化。登録必須。)
-[https://scrapbox.io/files/69281497216260f0ce45971a.png]
+<img width="1000" height="555" alt="image" src="https://github.com/user-attachments/assets/0e6867bd-b894-460e-ac43-a29b66000ea8" />
 URL :
 https://app.researchrabbit.ai/
 
 - Semantic Scholar(見やすい！多読用。登録必須。)
-[https://scrapbox.io/files/692815082e83e626e87810fd.png]
+<img width="857" height="697" alt="image" src="https://github.com/user-attachments/assets/54150140-7709-4abb-ba2c-208a357b6ed2" />
 URL :
 https://www.semanticscholar.org/
 
 - Elicit(表形式。多読用。登録必須。)
-[https://scrapbox.io/files/6928113efe7be08d3a93e627.png]
+<img width="1000" height="496" alt="image" src="https://github.com/user-attachments/assets/c4be3cbc-a9a4-4b2c-ab03-b2250bf637b2" />
 URL :
 https://elicit.com/
 
@@ -33,9 +33,9 @@ URL :
 https://chatgpt.com/share/692815bd-ceb8-8009-af04-5441c103f4f5
 
 - Zotero(論文管理用。基本無料かつ、chromeの拡張機能でサイトから直接入れる。)
-[https://scrapbox.io/files/692816b540dbebb8cacf71ea.png]
+<img width="1000" height="487" alt="image" src="https://github.com/user-attachments/assets/f65f98f7-1cb1-4e40-9161-8f6e495a8534" />
 URL :
 https://www.zotero.org/
 
 - Cosense(伊達研御用達サイト。ちょっとしたメモに最適。)
-[https://scrapbox.io/files/692818950149df9193a3ddb0.png]
+<img width="1000" height="313" alt="image" src="https://github.com/user-attachments/assets/430ee22b-eb78-453d-b3f9-dfed2c95f532" />
